# libromfs

./: CMakeLists.txt  README.md
generator/: CMakeLists.txt
generator/include/: embedder.hpp
generator/source/: main.cpp
lib/: CMakeLists.txt
lib/include/romfs/: embedder.hpp  romfs.hpp
lib/source/: romfs.cpp
